welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	rassemblage();
	var y = getMondeLargeur();
	var z = getMondeHauteur();
	for( j <- 1 to y-1){
		droite();
		recule();
		gauche();
		avance();
		pint();
		}	
	
}
def rassemblage():Array[Color] ={
	var x = getMondeHauteur();
	var T = new Array[Color](x);
	for (i <- 0 to x-1){
		T(i) = getCouleurSol();
		avance();
	}
	return T;
}
def pint(){
	var x = getMondeHauteur();

	for ( k <- 0 to x-1){
		setCouleurBrosse(T(k));
		baisseBrosse();
		leveBrosse();
		avance()
	}
}
	


